# ClaytonXYZ

./: .gitignore  Cargo.toml  README.md  app.js  default.nix  package-lock.json  package.json  shell.nix
.github/: dependabot.yml
s/: styles.css
s/games/arc-2/web-cdt/v1.0.2/: badWords.js  classes.js  index.body
s/games/arc-2/web/v1.0.2/: classes.js  globals.js  index.body  index.js  objects.js
s/games/arc-2/web/v1.0.2-CDT/: globals.js  index.js  todo.txt
s/software/calculator-the-game-cheats/web/: v1.0.html
s/software/comcode-translator/web/: v1.0.0.html
s/software/word-search-cheats/web/: v1.0.0.html
src/: accounts.rs  blog.rs  games.rs  legacy_redirects.rs  lib.rs  main.rs  page.rs  product.rs  software.rs
w/: 404.html
w/games/arc-2/web/: v1.0.2-CDT.body  v1.0.2-CDT.head  v1.0.2.body  v1.0.2.head
w/games/arc-plat/web/: v1.1.1.body  v1.1.2.body
w/games/carai/web/: v1.0.0.body  v1.0.0.head
w/games/demonic-conquest/web/: v0.1.body  v0.1.head
w/games/russian-roulette/web/: v1.1.0.body  v1.1.0.head
w/games/tetris/web/: v1.0.0.body  v1.0.0.head
w/games/the-giver-the-game/web/: v1.0.body  v1.0.head
w/software/calculator-the-game-cheats/web/: v1.0.body
w/software/comcode-translator/web/: v1.0.0.body
w/software/legitimate-images-made-from-images/web/: v1.0.0.body  v1.0.0.head
w/software/symbol-translator/web/: v1.1.2.body  v1.1.2.head  v1.2.0.body  v1.2.0.head
w/software/tessellation-creator/web/: v1.0.0.body  v1.0.0.head
w/software/word-search-cheats-ocr/web/: v1.0.0.body
w/software/word-search-cheats/web/: v1.0.0.body
(+50 files in other folders)
