[package]
name = "clayton_xyz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
maud = { git = "https://github.com/tamc/maud", rev="857a4c8", features = ["rocket"]}
dotenv = "0.15"
lazy_static = "1.4"
indexmap = "1.7"
maplit = "1.0.2"
chrono = "0.4"
pbkdf2 = "0.10"
unicase = "2.6"
regex = "1.5"
validator = "0.14"
aes = "0.8"